--- a/Lab1/Style.css
+++ b/Lab1/Style.css
@@ -1,18 +1,20 @@
 .screen{
-    height: 350px;
-    background-color: green;
+    max-height: 350px;
+    background-color: rgb(52, 206, 52);
+    min-height: 147px;
 }
 
 .tercio{
-    width: 400px;
+    width: 33%;
 }
 
 .fotomarco{
-    background-color: aliceblue;
-    height: 100%;
+    background-color: rgb(183, 221, 255);
+    max-height: 350px;
+    text-align: center;
 }
 
 .fotoperfil{
-    height: 95%;
-    width: 100%;
+    max-width: 100%;
+    max-height: 350px;
 }
